--- a/css/style.css
+++ b/css/style.css
@@ -28,19 +28,15 @@ h3, p, span, a {
 /* ---------- header ---------- */
 header {
     width: 90%;
-    margin: 30px auto;
+    margin: 20px auto;
 }
 
 #navbar1 {
     display: flex;
 }
 
-#logo {
-    align-self: flex-end;
-}
-
 nav {
-    flex-basis: 85%;
+    flex-basis: 100%;
 }
 
 ul {
@@ -65,13 +61,25 @@ nav a:hover, a:active {
   	color: #0065fc;
 }
 
+#inscription a {
+    color: #0065fc;
+    font-weight: bold;
+    padding: 30px 30px;
+    vertical-align: middle;
+    text-align: center;
+}
+
+#inscription a:hover, a:active {
+    border-top: medium solid #0065fc;
+}
+
 #navbar2 {
     display: none;
 }
 
 /* responsive design navbar */
 /* extra small devices (phones) */
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
     #navbar1 {
         display: none;
     }
@@ -81,40 +89,47 @@ nav a:hover, a:active {
         flex-wrap: wrap;
     }
     
-    nav ul {
-        display: flex;
-        /*flex: 50%;*/
-    }
-
-    nav a {
-        padding: 15px 50px;
-        flex: 50%;
-        /*justify-content: space-between;*/
-    }
-
-    nav a:hover, a:active {
-        border-top: none;
-        border-bottom: medium solid #0065fc;
-        color: #0065fc;
-    }
-
     #logo_inscription {
         display: flex;
         flex-basis: 100%;
         justify-content: space-between;
+        align-items: center;
+    }
+
+    #inscription {
+        text-align: right;
+        font-weight: bold;
+        color: #0065fc;
+    }
+        
+    #nav {
+        display: flex;
+        flex-basis: 100%;
+        width: 100%;
+        height: 50px;
+        align-items: center;
+        margin-bottom: 15px;
+    }
+
+    #nav a {
+        width: 50%;
+        text-align: center;
+        padding: 15px 0;
+    }
+
+    #nav a:hover, a:active {
+        border-top: none;
+        border-bottom: medium solid #0065fc;
+        color: #0065fc;
     }
 }
 
 /* responsive design navbar */
 /* small devices and up (large phones and portrait tablets and up) */
-@media only screen and (min-width: 451px) and (max-width: 768px) {
+/*@media only screen and (min-width: 601px) and (max-width: 768px) {
     #navbar2 {
         display: none;
     }
-
-    /*#navbar1 {
-
-    }*/
 
     nav {
         flex-basis: 50%;
@@ -133,7 +148,7 @@ nav a:hover, a:active {
         flex-basis: 100%;
         justify-self: flex-start;
     }
-}
+}*/
 
 
 
@@ -325,7 +340,7 @@ main {
 
 .hebergement_card {
     width: 230px;
-    height: 200px;
+    height: 190px;
     background-color: white;
     border-radius: 25px;
     border: thick white solid;
@@ -339,7 +354,7 @@ main {
 
 .hebergement_card img {
     width: 230px;
-    height: 130px;
+    height: 120px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
@@ -349,10 +364,6 @@ main {
     padding: 0 0 15px 5px;
     line-height: 0.2em;
     font-size: 0.9em;
-}
-
-.descriptif_h h2 {
-    font-size: 1em;
 }
 
 #resultats_populaires {
