--- a/css/style.css
+++ b/css/style.css
@@ -130,11 +130,16 @@ main {
     margin: auto;
 }
 
+/* responsive design main */
+/* medium devices (phones to large phones and portrait tablets) */
+@media only screen and (max-width: 768px) {
+    main {
+        width: 100%;
+    }
+
 /* ---------- section_1_recherche ----------*/
 #searchbar1 {
     display: inline-flex;
-    max-width: 600px;
-    position: relative;
     align-items: center;
 }
 
@@ -255,20 +260,22 @@ main {
 /* responsive design filtres */
 /* medium devices (phones to large phones and portrait tablets) */
 @media only screen and (max-width: 768px) {
-
+    #recherche {
+        width: 90%;
+        margin: auto;
+    }
+    
     #searchbar1 {
         display: none;
     }
 
     #searchbar2 {
         display: inline-flex;
-        max-width: 500px;
-        position: relative;
         align-items: center;
     }
     
-    #searchbox {
-        display: none;
+    #champ {
+        width: 60%;
     }
 
     #filtres {
@@ -308,7 +315,7 @@ main {
 #hebergements_container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 #hebergements_container div {
@@ -359,7 +366,6 @@ main {
     border-radius: 25px;
     padding: 25px;
     margin-left: 35px;
-    justify-content: center;
 }
 
 #resultats_populaires h1 {
@@ -418,8 +424,6 @@ main {
 } 
 
 /* responsive design hebergements */
-/* large devices (landscape tablets, laptops, desktops) */
-/* A CORRIGER - LES PARAMETRES NE FONCTIONNENT PAS */
 /*@media only screen and (max-width: 1024px) {
     #resultats_hebergements {
         width: 65%;
@@ -493,6 +497,15 @@ main {
 
     #resultats_hebergements {
         background-color: white;
+        justify-content: center;
+    }
+    
+    #resultats_hebergements h1 {
+        padding-left: 0;
+    }
+
+    #hebergements_container div {
+        justify-content: center;
     }
 }
 
@@ -508,8 +521,7 @@ main {
         margin-right: 0;
         margin-left: 0;
         padding: 0;
-        padding-top: 25px;
-        padding-bottom: 25px;
+        padding-top: 10px;
         border-radius: 0;
         background-color: white;
     }
@@ -520,22 +532,24 @@ main {
     }
 
     #populaires_container div {
+        width: 85%;
         margin: 10px auto;
     }
 
+    #populaires_container div img {
+        width: 35%;
+    }
+
     #hebergements_container div {
-        width: 350px;
-        height: 190px;
-        margin: 10px;
+        width: 85%;
+        margin: 10px auto;
     }
 
     #hebergements_container div img {
-        width: 350px;
+        width: 100%;
         height: 120px;
     }
 }
-
-
 
 /* ---------- section_3_activites ---------- */
 #resultats_activites {
@@ -628,7 +642,6 @@ footer {
 }
 
 /* responsive design footer */
-/* ATTENTION PLUS DE STYLES EN-DESSOUS DE 425px ET A PARTIR DE 769px */
 /* extra small to small devices (phones to large phones and portrait tablets) */
 @media only screen and (max-width: 768px)  {
     #footer_container {
@@ -652,4 +665,4 @@ footer {
         margin-block-start: 0;
         margin-block-end: 5px;
     }
-}
+}}
