--- a/css/style.css
+++ b/css/style.css
@@ -368,13 +368,16 @@ main {
     margin-left: 35px;
 }
 
-#resultats_populaires h1 {
-    padding-left: 50px;
+#l_title {
+    display: none;
 }
 
-.fa-chart-line {
-    float: right;
-    padding-right: 50px;    
+#s-m_title {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 85%;
+    margin: auto;
 }
 
 #populaires_container {
@@ -481,8 +484,15 @@ main {
 /* medium devices (large phones and portrait tablets) */
 @media only screen and (max-width: 768px) {
     #section_hebergements {
-        display: flex;
         flex-direction: column-reverse;
+    }
+
+    #titre_l {
+        display: none;
+    }
+
+    #titre_s-m {
+        justify-content: center;
     }
 
     #resultats_hebergements, #resultats_populaires {
@@ -497,15 +507,34 @@ main {
 
     #resultats_hebergements {
         background-color: white;
-        justify-content: center;
     }
-    
-    #resultats_hebergements h1 {
-        padding-left: 0;
+
+    #resultats_hebergements h1, h3 {
+        padding-left: 100px;
     }
 
     #hebergements_container div {
         justify-content: center;
+    }
+
+    #resultats_populaires {
+        width: 90%;
+        margin: auto;
+        border-radius: 25px;
+        background-color: #f2f2f2;
+    }
+}
+
+/* responsive design hebergements */
+/* small devices (large phones and small tablets) */
+@media only screen and (max-width: 600px) {
+    #resultats_hebergements h1, h3 {
+        padding-left: 50px;
+    }
+
+    #resultats_populaires {
+        width: 100%;
+        border-radius: 0;
     }
 }
 
@@ -527,8 +556,16 @@ main {
     }
    
     #resultats_populaires {
+        width: 100%;
         margin-left: 0;
         border-radius: 0;
+    }
+    #s-m_title {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 85%;
+        margin: auto;
     }
 
     #populaires_container div {
@@ -549,6 +586,16 @@ main {
         width: 100%;
         height: 120px;
     }
+
+    /*#hebergements_container h1, h3 {
+        justify-content: center;
+        padding-left: 0;
+    }
+
+    #populaires_container h1 {
+        justify-content: center;
+        padding-left: 0;
+    }*/
 }
 
 /* ---------- section_3_activites ---------- */
