--- a/css/style.css
+++ b/css/style.css
@@ -77,65 +77,11 @@ nav a:hover, a:active {
     display: none;
 }
 
-/* responsive design navbar */
-/* extra small devices (phones) */
-@media only screen and (max-width: 600px) {
-    #navbar1 {
-        display: none;
-    }
-
-    #navbar2 {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    
-    #logo_inscription {
-        display: flex;
-        flex-basis: 100%;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    #inscription {
-        text-align: right;
-        font-weight: bold;
-        color: #0065fc;
-    }
-        
-    #nav {
-        display: flex;
-        flex-basis: 100%;
-        width: 100%;
-        height: 50px;
-        align-items: center;
-        margin-bottom: 15px;
-    }
-
-    #nav a {
-        width: 50%;
-        text-align: center;
-        padding: 15px 0;
-    }
-
-    #nav a:hover, a:active {
-        border-top: none;
-        border-bottom: medium solid #0065fc;
-        color: #0065fc;
-    }
-}
-
 /* ---------- main ---------- */
 main {
     width: 90%;
     margin: auto;
 }
-
-/* responsive design main */
-/* medium devices (phones to large phones and portrait tablets) */
-@media only screen and (max-width: 768px) {
-    main {
-        width: 100%;
-    }
 
 /* ---------- section_1_recherche ----------*/
 #searchbar1 {
@@ -151,6 +97,7 @@ main {
     border-radius: 15px 0 0 15px;
 }
 
+/* comment supprimer la marge entre le champ et le bouton ? */
 #champ {
     border-color: #f2f2f2;
     font-weight: bold;
@@ -161,20 +108,13 @@ main {
     -webkit-box-sizing: content-box;
     border: thin #f2f2f2 solid;
     padding: 15px;
-    margin-left: 0;
 }
-
-/*.display_mobile {
-    display: none;
-}*/
 
 #searchbar2 {
     display: none;
 }
 
-/* comment supprimer la marge entre le champ et le bouton ? */
 #bouton {
-     margin-left: 0;
      padding: 15px;
      background-color: #0065fc;
      color: white;
@@ -255,43 +195,6 @@ main {
 .fa-info-circle {
     color: #0065fc;
     padding-right: 5px;
-}
-
-/* responsive design filtres */
-/* medium devices (phones to large phones and portrait tablets) */
-@media only screen and (max-width: 768px) {
-    #recherche {
-        width: 90%;
-        margin: auto;
-    }
-    
-    #searchbar1 {
-        display: none;
-    }
-
-    #searchbar2 {
-        display: inline-flex;
-        align-items: center;
-    }
-    
-    #champ {
-        width: 60%;
-    }
-
-    #filtres {
-        flex-wrap: wrap;
-        align-content: space-around;
-    }
-    
-    #filtres_titre {
-        display: flex;
-        width: 100%;
-        font-weight: bold;
-    }
-
-    .selection {
-        margin: 10px 5px;
-    }
 }
 
 /* ---------- section_2_hebergements ---------- */
@@ -480,124 +383,6 @@ main {
     }    
 }*/
 
-/* responsive design hebergements */
-/* medium devices (large phones and portrait tablets) */
-@media only screen and (max-width: 768px) {
-    #section_hebergements {
-        flex-direction: column-reverse;
-    }
-
-    #titre_l {
-        display: none;
-    }
-
-    #titre_s-m {
-        justify-content: center;
-    }
-
-    #resultats_hebergements, #resultats_populaires {
-        width: 100%;
-        margin-right: 0;
-        margin-left: 0;
-        padding: 0;
-        padding-top: 25px;
-        padding-bottom: 25px;
-        border-radius: 0;
-    }
-
-    #resultats_hebergements {
-        background-color: white;
-    }
-
-    #resultats_hebergements h1, h3 {
-        padding-left: 100px;
-    }
-
-    #hebergements_container div {
-        justify-content: center;
-    }
-
-    #resultats_populaires {
-        width: 90%;
-        margin: auto;
-        border-radius: 25px;
-        background-color: #f2f2f2;
-    }
-}
-
-/* responsive design hebergements */
-/* small devices (large phones and small tablets) */
-@media only screen and (max-width: 600px) {
-    #resultats_hebergements h1, h3 {
-        padding-left: 50px;
-    }
-
-    #resultats_populaires {
-        width: 100%;
-        border-radius: 0;
-    }
-}
-
-/* responsive design hebergements */
-/* extra small devices (phones) */
-@media only screen and (max-width: 480px) {
-    #section_hebergements {
-        display: flex;
-        flex-direction: column-reverse;
-    }
-
-    #resultats_hebergements {
-        margin-right: 0;
-        margin-left: 0;
-        padding: 0;
-        padding-top: 10px;
-        border-radius: 0;
-        background-color: white;
-    }
-   
-    #resultats_populaires {
-        width: 100%;
-        margin-left: 0;
-        border-radius: 0;
-    }
-    #s-m_title {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 85%;
-        margin: auto;
-    }
-
-    #populaires_container div {
-        width: 85%;
-        margin: 10px auto;
-    }
-
-    #populaires_container div img {
-        width: 35%;
-    }
-
-    #hebergements_container div {
-        width: 85%;
-        margin: 10px auto;
-    }
-
-    #hebergements_container div img {
-        width: 100%;
-        height: 120px;
-    }
-
-    /*#hebergements_container h1, h3 {
-        justify-content: center;
-        padding-left: 0;
-    }
-
-    #populaires_container h1 {
-        justify-content: center;
-        padding-left: 0;
-    }*/
-}
-
 /* ---------- section_3_activites ---------- */
 #resultats_activites {
     margin: 50px;
@@ -687,10 +472,83 @@ footer {
     flex-basis: 30%;
     margin: 10px;
 }
-
-/* responsive design footer */
-/* extra small to small devices (phones to large phones and portrait tablets) */
+/* responsive design */
+/* medium devices (larger smartphones and tablets) */
 @media only screen and (max-width: 768px)  {
+    main {
+        width: 100%;
+    }
+
+    #recherche {
+        width: 90%;
+        margin: auto;
+    }
+    
+    #searchbar1 {
+        display: none;
+    }
+
+    #searchbar2 {
+        display: inline-flex;
+        align-items: center;
+    }
+    
+    #champ {
+        width: 60%;
+    }
+
+    #filtres {
+        flex-wrap: wrap;
+        align-content: space-around;
+    }
+    
+    #filtres_titre {
+        display: flex;
+        width: 100%;
+        font-weight: bold;
+    }
+
+    .selection {
+        margin: 10px 5px;
+    }
+
+    #section_hebergements {
+        flex-direction: column-reverse;
+    }
+
+    #titre_l {
+        display: none;
+    }
+
+    #titre_s-m {
+        justify-content: center;
+    }
+
+    #resultats_hebergements, #resultats_populaires {
+        width: 100%;
+        margin-right: 0;
+        margin-left: 0;
+        padding: 0;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        border-radius: 0;
+    }
+
+    #resultats_hebergements {
+        background-color: white;
+    }
+
+    #resultats_hebergements h1, h3 {
+        padding-left: 100px;
+    }
+
+    #resultats_populaires {
+        width: 90%;
+        margin: auto;
+        border-radius: 25px;
+        background-color: #f2f2f2;
+    }
+
     #footer_container {
         padding: 20px 30px;
         background-color: #f2f2f2;
@@ -712,4 +570,107 @@ footer {
         margin-block-start: 0;
         margin-block-end: 5px;
     }
-}}
+}
+
+/* small devices (landcape smartphones and small tablets) */
+@media only screen and (max-width: 600px) {
+    #navbar1 {
+        display: none;
+    }
+
+    #navbar2 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    #logo_inscription {
+        display: flex;
+        flex-basis: 100%;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    #inscription {
+        text-align: right;
+        font-weight: bold;
+        color: #0065fc;
+    }
+        
+    #nav {
+        display: flex;
+        flex-basis: 100%;
+        width: 100%;
+        height: 50px;
+        align-items: center;
+        margin-bottom: 15px;
+    }
+
+    #nav a {
+        width: 50%;
+        text-align: center;
+        padding: 15px 0;
+    }
+
+    #nav a:hover, a:active {
+        border-top: none;
+        border-bottom: medium solid #0065fc;
+        color: #0065fc;
+    }
+
+    #resultats_hebergements h1, h3 {
+        padding-left: 50px;
+    }
+
+    #resultats_populaires {
+        width: 100%;
+        border-radius: 0;
+    }
+}
+
+/* extra small devices (small smartphones) */
+@media only screen and (max-width: 480px) {
+    #section_hebergements {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    #resultats_hebergements {
+        margin-right: 0;
+        margin-left: 0;
+        padding: 0;
+        padding-top: 10px;
+        border-radius: 0;
+        background-color: white;
+    }
+   
+    #resultats_populaires {
+        width: 100%;
+        margin-left: 0;
+        border-radius: 0;
+    }
+    #s-m_title {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 85%;
+        margin: auto;
+    }
+
+    #populaires_container div {
+        width: 85%;
+        margin: 10px auto;
+    }
+
+    #populaires_container div img {
+        width: 35%;
+    }
+
+    #hebergements_container div {
+        width: 85%;
+        margin: 10px auto;
+    }
+
+    #hebergements_container div img {
+        width: 100%;
+    }
+}
