--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,10 @@ main {
 }
 
 /* ---------- section_1_recherche ----------*/
+#searchbar2 {
+    display: none;
+}
+
 #searchbar1 {
     display: inline-flex;
     align-items: center;
@@ -136,10 +140,6 @@ main {
     -webkit-box-sizing: content-box;
     border: thin #f2f2f2 solid;
     padding: 15px;
-}
-
-#searchbar2 {
-    display: none;
 }
 
 #bouton {
@@ -235,8 +235,6 @@ main {
     background-color: #f2f2f2;
     border-radius: 25px;
     padding: 25px;
-    display: flex;
-    flex-wrap: wrap;
 }
 
 #resultats_hebergements h1, h3 {
@@ -256,7 +254,7 @@ main {
     border-radius: 25px;
     border: thick white solid;
     box-shadow: 0 0 10px lightgrey;
-    margin: 10px;
+    margin: 15px 15px 35px;
     padding-block-end: 5px;
 }
 
@@ -356,7 +354,11 @@ main {
 } 
 
 /* ---------- section_3_activites ---------- */
-#resultats_activites {
+#resultats_activites2 {
+    display: none;
+}
+
+#resultats_activites1 {
     margin-top: 50px;
 }
 
@@ -440,7 +442,6 @@ footer {
 
 #footer_container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
     background-color: #f2f2f2;
     padding: 30px 40px;
@@ -453,8 +454,42 @@ footer {
 }
 
 .footer_children {
-    flex-basis: 30%;
+    flex-basis: 28%;
     margin: 10px;
+}
+
+/* responsive design */
+/* large devices (landscape tablets and lap-desktops) */
+@media only screen and (max-width: 1440px)  {
+    #resultats_activites1 {
+        display: none;
+    }
+
+    #resultats_activites2 {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 0;
+    }
+
+    #resultats_activites2 h1 {
+        padding-left: 100px;
+    }
+
+    #activites_container {
+        justify-content: space-evenly;
+    }
+
+    .suggestion_l, .suggestion_m, .suggestion_s, .suggestion_xs {
+        width: 40%;
+        height: 250px;
+        margin-bottom: 30px;
+        background-color: white;
+    }
+
+    .suggestion_l img, .suggestion_m img, .suggestion_s img, .suggestion_xs img {
+        width: 100%;
+        height: 200px;
+    }
 }
 
 /* responsive design */
@@ -486,7 +521,7 @@ footer {
     }
 
     #resultats_hebergements h1, h3 {
-        padding-left: 0;
+        padding-left: 75px;
     }
     
     #resultats_populaires {
@@ -511,6 +546,8 @@ footer {
 
     #populaires_container {
         justify-content: space-evenly;
+        margin-top: 10px;
+        margin-bottom: 30px;
     }
 
     #populaires_container div {
@@ -526,6 +563,10 @@ footer {
     margin-right: 0;
     margin-bottom: 5px;
     }
+    
+    .icon {
+        padding-left: 5px;
+    }
 
     #populaires_container div h2 {
         margin-bottom:0;
@@ -539,8 +580,16 @@ footer {
         line-height: 1,8;    
     }
 
-    .icon {
-        padding-left: 5px;
+    #resultats_activites2 h1 {
+        padding-left: 75px;
+    }
+
+    footer {
+        margin-top: 0;
+    }
+
+    .footer_children:nth-of-type(1) {
+        flex-basis: 35%;
     }
 }
 
@@ -580,10 +629,6 @@ footer {
         align-items: center;
         width: 85%;
         margin: auto;
-    }
-
-    #resultats_hebergements h1, h3 {
-        padding-left: 100px;
     }
 
     #resultats_populaires {
@@ -629,22 +674,31 @@ footer {
     .icon {
         padding: 0;
     }
+    
+    #resultats_activites2 {
+        background-color: #0065fc;
+    }
+
+    #resultats_activites2 h1 {
+        color: white;
+    }
+
+    .suggestion_l, .suggestion_m, .suggestion_s, .suggestion_xs {
+        border: thin white solid;
+    }
 
     #footer_container {
         padding: 20px 30px;
-        background-color: #f2f2f2;
+        background-color: grey;
+    }
+
+    .footer_children h2, .footer_children a {
+        color: white;
     }
 
     #footer_container ul {
         line-height: 1.4;
         margin: 0;
-    }
-
-    .footer_children {
-        flex-basis: 100%;
-        justify-content: center;
-        box-sizing: border-box;
-        margin: 5px;
     }
 
     #footer_children h2 {
@@ -698,14 +752,18 @@ footer {
         color: #0065fc;
     }
 
-    #resultats_hebergements h1, h3 {
-        padding-left: 50px;
-    }
-
     #resultats_populaires {
         width: 100%;
         margin: 0;
         border-radius: 0;
+    }
+
+    #resultats_activites2 h1 {
+        padding-left: 50px;
+    }
+
+    #footer_container {
+        font-size: small;
     }
 }
 
@@ -724,7 +782,7 @@ footer {
         border-radius: 0;
         background-color: white;
     }
-   
+
     #titre {
         display: flex;
         justify-content: space-between;
@@ -742,6 +800,11 @@ footer {
         width: 35%;
     }
 
+    #resultats_hebergements h1, h3 {
+        text-align: left;
+        padding-left: 40px;
+    }
+
     #hebergements_container div {
         width: 85%;
         margin: 10px auto;
@@ -749,5 +812,30 @@ footer {
 
     #hebergements_container div img {
         width: 100%;
+    }
+    
+    #resultats_activites2 {
+        background-color: white;
+    }
+
+    #resultats_activites2 h1 {
+        text-align: left;
+        padding-left: 40px;
+        color: black;
+    }
+
+    #footer_container {
+    display: block;
+    background-color: #f2f2f2;
+    font-size: medium;
+    }
+
+    .footer_children h2, .footer_children a {
+        color: black;
+    }
+
+    .suggestion_l, .suggestion_m, .suggestion_s, .suggestion_xs {
+        width: 85%;
+        border: none;
     }
 }
